<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="ml.ernestovector.proyectosemana2_coursera.ConfirmarDatos">

    <TextView
        android:id="@+id/tvDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="@dimen/texto_nombre"
        android:layout_marginTop="@dimen/margen_superior"
        android:text="@string/confirmar_datos"/>

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:textSize="@dimen/texto_datos"
        android:layout_marginTop="@dimen/margen_superior"
        android:layout_marginStart="@dimen/margen_datos"
        android:layout_below="@+id/tvDatos"
        android:text="@string/nombre_muestra"/>

    <TextView
        android:id="@+id/tvFechaNacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:textSize="@dimen/texto_datos"
        android:layout_marginTop="@dimen/margen_superior"
        android:layout_marginStart="@dimen/margen_datos"
        android:layout_below="@+id/tvNombre"
        android:text="@string/fecha_muestra"/>

    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:textSize="@dimen/texto_datos"
        android:layout_marginTop="@dimen/margen_superior"
        android:layout_marginStart="@dimen/margen_datos"
        android:layout_below="@+id/tvFechaNacimiento"
        android:text="@string/telefono_muestra"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:textSize="@dimen/texto_datos"
        android:layout_marginTop="@dimen/margen_superior"
        android:layout_marginStart="@dimen/margen_datos"
        android:layout_below="@+id/tvTelefono"
        android:text="@string/email_muestra"/>

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:textSize="@dimen/texto_datos"
        android:layout_marginTop="@dimen/margen_superior"
        android:layout_marginStart="@dimen/margen_datos"
        android:layout_below="@+id/tvEmail"
        android:text="@string/descripcion_muestra"/>

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/MiBotonRaised"
        android:text="@string/bot_atras"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margen_boton"/>

</RelativeLayout>
